Prevent TLD container border from overlapping into message by one pixel

--- a/app/components/ui/domain-input/styles.scss
+++ b/app/components/ui/domain-input/styles.scss
@@ -17,6 +17,7 @@
 	&.has-error {
 		.input,
 		.tld-container {
+			border-bottom: 0;
 			border-bottom-left-radius: 0;
 			border-bottom-right-radius: 0;
 			border-top: 1px solid $alert-yellow;
